# co5300

./: Cargo.toml  README.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1w9s7fa41z51mrbf99rj86mpq69awqwg-source  31b3sl8j9g177sbvvvfrs56gwvp7xmis-source  fsxqk48m08ylgvgb8ld5pxkwl0qyhb62-source
src/: co5300.rs  consts.rs  embedded_graphics.rs  error.rs  lib.rs
