[package]
name = "co5300"
version = "0.1.0"
edition = "2021"

description = "A **PURE RUST** driver for the ICNA5300 / CO5300 (different names same thing)"
authors = ["Desmond Mehta <desmondmehta@gmail.com>"]
keywords = ["embedded-hal", "embedded-hal-async"]
categories = ["embedded", "no-std"]

[dependencies]
defmt = "0.3.8"
anyhow = { version = "1.0", default-features = false }
embedded-hal = { version = "1.0.0", optional = true } 
embedded-hal-async = { version = "1.0.0", optional = true } 
heapless = "0.8.0"

embedded-graphics-core = { version = "0.4.0", optional = true }
embedded-graphics-framebuf = "0.5.0"

embassy-time = { version = "0.3.2", git = "https://github.com/embassy-rs/embassy.git", optional = true }

[features]
default = ["async", "embedded_graphics", "embassy"]
sync = ["embedded-hal"]
async = ["embedded-hal", "embedded-hal-async"]
embedded_graphics = ["embedded-graphics-core"]
embassy = ["embassy-time"]

[package.metadata.docs.rs]
all-features = true
