[package]
name = "co5300"
version = "0.1.0"
edition = "2021"

description = "A **PURE RUST** driver for the ICNA5300 / CO5300 (different names same thing)"
authors = ["Desmond Mehta <desmondmehta@gmail.com>"]
keywords = ["embedded-hal", "embedded-hal-async"]
categories = ["embedded", "no-std"]

[dependencies]
defmt = "1.0.1"
embedded-hal = { version = "1.0.0", optional = true } 
embedded-hal-async = { version = "1.0.0", optional = true } 
heapless = "0.8.0"

embedded-graphics-core = { version = "0.4.0", optional = true }
embedded-graphics-framebuf = "0.5.0"

embassy-time = { version = "0.4.0", optional = true }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }

[features]
default = ["async", "embedded_graphics", "embassy"]
sync = ["embedded-hal"]
async = ["embedded-hal", "embedded-hal-async"]
embedded_graphics = ["embedded-graphics-core"]
embassy = ["embassy-time"]

[package.metadata.docs.rs]
all-features = true
